update folders to be ignored

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 part2-cost-shifting/data
-part2-cost-shifting/output
+part2-cost-shifting/output 
+part2-cost-shifting/.ipynb_checkpoints/healthcare-spending-checkpoint.ipynb
+part2-cost-shifting/data/fiscal_rules_data_071618.csv
+
